# nftables

./: .gitignore  INSTALL  Makefile.am  configure.ac
doc/: Makefile.am  data-types.txt  libnftables-json.adoc  libnftables.adoc  nft.txt  payload-expression.txt  stateful-objects.txt  statements.txt
examples/: Makefile.am
files/examples/: ct_helpers.nft  load_balancing.nft
include/: Makefile.am  cache.h  ct.h  datatype.h  expression.h  intervals.h  json.h  mnl.h  netlink.h  nft.h  nftables.h  parser.h  payload.h  proto.h  rule.h  statement.h  tcpopt.h  utils.h
include/linux/netfilter/: nf_tables.h  nfnetlink_hook.h
include/nftables/: libnftables.h
py/: Makefile.am  nftables.py  setup.py
py/src/: nftables.py
src/: Makefile.am  cache.c  cli.c  cmd.c  ct.c  datatype.c  dccpopt.c  erec.c  evaluate.c  expression.c  exthdr.c  fib.c  gmputil.c  iface.c  intervals.c  ipopt.c  json.c  libnftables.c  libnftables.map  main.c  mergesort.c  meta.c  mini-gmp.c  misspell.c  mnl.c  monitor.c  netlink.c  netlink_delinearize.c  netlink_linearize.c  nfnl_osf.c  nftutils.c  nftutils.h  optimize.c  osf.c  owner.c  parser_bison.y  parser_json.c  payload.c  proto.c  rt.c  (+9 more)
tests/monitor/: run-tests.sh
tests/monitor/testcases/: simple.t
tests/py/: nft-test.py
tests/py/any/: limit.t  meta.t  meta.t.json  meta.t.payload  queue.t  queue.t.json  queue.t.payload  rawpayload.t  rawpayload.t.json  rawpayload.t.payload  tcpopt.t  tcpopt.t.json  tcpopt.t.payload
tests/py/bridge/: vlan.t  vlan.t.json  vlan.t.payload  vlan.t.payload.netdev
tests/py/inet/: meta.t  meta.t.json  meta.t.payload  reject.t  reject.t.json  reject.t.payload.inet  tcp.t  tcp.t.json  tcp.t.json.output  tcp.t.payload
tests/py/ip/: ct.t  ct.t.json  ct.t.payload  dnat.t  dnat.t.payload.ip  icmp.t  icmp.t.json  icmp.t.json.output  icmp.t.payload.ip  ip.t  ip.t.json  ip.t.payload  ip.t.payload.bridge  ip.t.payload.inet  ip.t.payload.netdev  ip_tcp.t  meta.t  meta.t.payload  reject.t  reject.t.json  reject.t.payload  snat.t  snat.t.json  snat.t.payload
tests/py/ip6/: ct.t  ct.t.json  ct.t.payload  icmpv6.t  icmpv6.t.json  icmpv6.t.json.output  icmpv6.t.payload.ip6  ip6.t  ip6.t.json  ip6.t.payload.inet  ip6.t.payload.ip6  meta.t  meta.t.json  meta.t.payload  reject.t  reject.t.json  reject.t.payload.ip6
tests/py/netdev/: reject.t.json
tests/shell/: README  run-tests.sh
tests/shell/features/: table_flag_owner.nft
tests/shell/helpers/: json-pretty.sh  json-sanitize-ruleset.sh  nft-valgrind-wrapper.sh  test-wrapper.sh
tests/shell/testcases/bitwise/dumps/: 0040mark_binop_0.json-nft  0040mark_binop_1.json-nft  0040mark_binop_2.json-nft  0040mark_binop_3.json-nft  0040mark_binop_4.json-nft  0040mark_binop_5.json-nft  0040mark_binop_6.json-nft  0040mark_binop_7.json-nft  0040mark_binop_8.json-nft  0040mark_binop_9.json-nft
tests/shell/testcases/bogons/nft-f/: range_expr_value_high_assert  unknown_expr_type_range_assert
tests/shell/testcases/cache/dumps/: 0001_cache_handling_0.json-nft  0002_interval_0.json-nft  0003_cache_update_0.json-nft  0004_cache_update_0.json-nft  0005_cache_chain_flush.json-nft  0006_cache_table_flush.json-nft  0007_echo_cache_init_0.json-nft  0008_delete_by_handle_0.json-nft  0011_index_0.json-nft
tests/shell/testcases/chains/: 0042chain_variable_0  0044chain_destroy_0  netdev_chain_0  netdev_chain_dev_gone  netdev_chain_dormant_autoremove  netdev_chain_multidev_gone  netdev_netns_gone
tests/shell/testcases/chains/dumps/: 0001jumps_0.json-nft  0002jumps_1.json-nft  0003jump_loop_1.json-nft  0004busy_1.json-nft  0005busy_map_1.json-nft  0006masquerade_0.json-nft  0007masquerade_1.json-nft  0009masquerade_jump_1.json-nft  0011endless_jump_loop_1.json-nft  0013rename_0.json-nft  0014rename_0.json-nft  0015check_jump_loop_1.json-nft  0016delete_handle_0.json-nft  0017masquerade_jump_1.json-nft  0018check_jump_loop_1.json-nft  (+19 more)
tests/shell/testcases/comments/: comments_0
tests/shell/testcases/flowtable/: 0015destroy_0
tests/shell/testcases/json/: netdev
tests/shell/testcases/listing/: 0013objects_0  0020flowtable_0  meta_time
tests/shell/testcases/maps/: 0014destroy_0  map_catchall_double_deactivate  named_ct_objects  named_limits  typeof_maps_0  typeof_maps_add_delete  typeof_maps_concat_update_0  vmap_timeout  vmap_unary
tests/shell/testcases/nft-f/: sample-ruleset
tests/shell/testcases/optimizations/: merge_nat  merge_reject  merge_stmts_concat  merge_stmts_vmap  merge_vmaps  not_mergeable  ruleset  single_anon_set
tests/shell/testcases/optionals/: comments_objects_0
tests/shell/testcases/owner/: 0002-persist
tests/shell/testcases/packetpath/: flowtables  payload  set_lookups  tcp_options  vlan_mangling
tests/shell/testcases/rule_management/: 0011reset_0  0012destroy_0
tests/shell/testcases/sets/: 0024synproxy_0  0036add_set_element_expiration_0  0043concatenated_ranges_0  0044interval_overlap_0  0044interval_overlap_1  0047nat_0  0062set_connlimit_0  0068interval_stack_overflow_0  0072destroy_0  automerge_0  concat_interval_0  elem_opts_compat_0  errors_0  reset_command_0  sets_with_ifnames  typeof_sets_0
tests/shell/testcases/transactions/: 0049huge_0  30s-stress  bad_expression
tools/: check-tree.sh
(+222 files in other folders)
